--- a/style.css
+++ b/style.css
@@ -3,13 +3,156 @@ h2 {
 }
 
 p {
-    font-size: 48px;
-}
-
-p {
-    font-style: 48px;
+    font-size: 24px;
 }
 
 button {
     border: 1px solid red;
+}
+
+a {
+    color: #000;
+}
+
+a:hover {
+    color: green;
+}
+
+a:active {
+    color: greenyellow;
+}
+
+a:focus {
+    border: 1px solid gray;
+}
+
+a:visited {
+    background: pink;
+}
+
+a:link {
+    background: blue;
+}
+
+.god::after {
+    content: "我理個怪怪";
+    font-size: 20px;
+}
+
+button::before {
+    content: "🔥 ";
+}
+
+button::after {
+    content: " ➡️";
+}
+
+.god::first-letter {
+    font-size: 80px;
+}
+
+.god::first-line {
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.god::selection {
+    background: purple;
+}
+
+.section {
+    height: 500px;
+    background:
+        url("https://cdn.pixabay.com/collection/thumbnail/2025/06/05/monk-1791113_1280.jpg") no-repeat center top,
+        url("https://cdn.pixabay.com/photo/2025/07/21/20/16/musician-9727163_1280.jpg") no-repeat center bottom,
+        linear-gradient(to right, red, blue);
+}
+
+.section-2 {
+    height: 500px;
+    background: radial-gradient(circle, pink, rgb(0, 255, 200), greenyellow);
+}
+
+.section-3 {
+    height: 500px;
+    background: repeating-linear-gradient(45deg, pink, rgb(0, 255, 200) 50px, greenyellow 20px);
+}
+
+.p1 {
+    border: 50px ridge violet;
+}
+
+
+.avatar {
+    width: 400px;
+    height: 400px;
+    background: url('https://i.pinimg.com/736x/c9/06/60/c906602f19e96966def6fce9c806f84d.jpg') center/cover;
+    clip-path: circle();
+}
+
+.card {
+    box-shadow: 0 12px 30px -8px rgba(0, 0, 0, .25);
+
+}
+
+.img {
+    filter: brightness(1.2) contrast(1.2) saturate(3) hue-rotate(10deg);
+    max-width: 300px;
+}
+
+/* 其他：blur(px) | grayscale(%) | sepia(%) | invert(%) | opacity(%) */
+.cardbox {
+    width: 1600px;
+    height: 300px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    place-content: center;
+}
+
+.container {
+    display: flex;
+    border: 2px solid #aaa;
+    width: 400px;
+    /* 故意限制寬度 */
+}
+
+.item {
+    flex: 0 1 auto;
+    /* grow=0 shrink=1 basis=auto */
+    padding: 10px;
+    background: peachpuff;
+    border: 1px solid #999;
+}
+
+.scroller {
+    overflow: auto;
+    scroll-snap-type: x mandatory;
+    display: flex;
+    width: 500px;
+}
+
+.slide {
+    scroll-snap-align: start;
+    flex: 0 0 100%;
+    height: 100px;
+    background-color: #999;
+}
+
+.banner {
+    width: 800px;
+    height: 400px;
+    overflow: hidden;
+    mask-image: linear-gradient(to right, black 70%, transparent);
+    mask-repeat: no-repeat;
+    mask-size: 100% 100%;
+}
+
+.banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+    /* ✅ 這時候才會生效 */
 }
